--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                 radius: 80,
                                 width: 10,
                                 number: percentage / 10,
-                                text: '%',
+                                text: '',
                                 colors: colors[i - 1]
                             });
                         }
