--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Preeti Sharma | PORTFOLIO</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" web developer, web developer freelance,web developer portfolio, web developer resume" />
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
     <!--fonts-->
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
